# FAIR-CLI

./: .buildinfo  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  PROPOSAL.html  PROPOSAL.md  README.md  develop.html  fair.configuration.html  fair.html  fair.registry.html  fair.templates.html  fair.user_config.html  genindex.html  index.html  modules.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: PROPOSAL.doctree  develop.doctree  environment.pickle  fair.configuration.doctree  fair.doctree  fair.registry.doctree  fair.templates.doctree  fair.user_config.doctree  index.doctree  modules.doctree
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yaml  fair-cli.yaml  gh-pages.yaml  implementations.yml  release_on_tag.yaml
_sources/: PROPOSAL.md.txt  fair.user_config.rst.txt
dante/: cli.py  dante.py  services.py  staging.py
dante/templates/: __init__.py  config.jinja  hist.jinja
docs/: DEVELOPER_README.md  PROPOSAL.md  conf.py  develop.md  fair.configuration.rst  fair.registry.rst  fair.rst  fair.templates.rst  index.rst  requirements.txt
fair/: __init__.py  cli.py  common.py  configuration.py  exceptions.py  fair.py  files.txt  history.py  identifiers.py  logging.py  parsing.py  register.py  registry.py  run.py  server.py  services.py  session.py  staging.py  testing.py  user_config.py  utilities.py  virtualenv.py
fair/configuration/: __init__.py  validation.py
fair/parsing/: __init__.py  autofill.py  globbing.py  register.py  variables.py
fair/registry/: __init__.py  file_formats.json  file_types.py  requests.py  server.py  storage.py  sync.py  versioning.py
fair/templates/: __init__.py  config.jinja  hist.jinja
fair/user_config/: __init__.py  globbing.py  validation.py
fdp/: cli.py  services.py  staging.py
homebrew/: fair-cli.rb
tests/: conftest.py  registry_install.py  test_cli.py  test_common.py  test_configuration.py  test_globbing.py  test_history.py  test_identifiers.py  test_register.py  test_registry.py  test_requests.py  test_run.py  test_server.py  test_session.py  test_staging.py  test_storage.py  test_sync.py  test_user_config.py  test_utilities.py  test_utils.py  test_varparsing.py  test_versioning.py  test_with_api.py
tests/data/: config.ini  create_user.py  dummy_conf.yaml  registry-test-settings.py  test_config.yaml  test_pull_config.yaml  test_register.yaml  test_wildcards_config.yaml
