[tool.poetry]
name = "fair-cli"
version = "0.3.0"
description = "Synchronization interface for the SCRC FAIR Data Pipeline registry"
authors = [
    "Richard Reeve <richard.reeve@glasgow.ac.uk>",
    "Nathan Cummings <nathan.cummings@ukaea.uk>",
    "Dennis Reddyhoff <d.reddyhoff@sheffield.ac.uk>",
    "Kristian Zarebski <kristian.zarebski@ukaea.uk>"
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Development Status :: 4 - Beta",
    "Topic :: Database :: Front-Ends",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: OS Independent"
]

homepage = "https://www.fairdatapipeline.org/"

repository = "https://github.com/FAIRDataPipeline/FAIR-CLI"

documentation = "https://www.fairdatapipeline.org/docs/interface/fdp/"

packages = [
    {include = "fair"}
]
license = "BSD-2-Clause"

readme = "README.md"

keywords = [
    "FAIR Data Pipeline",
    "FAIR",
    "Data Management",
    "Provenance"
]

include = ["CHANGELOG.md", "README.md", "CITATION.cff"]

[tool.poetry.dependencies]
python = "^3.7.1,<4.0"
click = "^8.0.0"
requests = "^2.23.0"
toml = "^0.10.2"
rich = ">=10.2.3,<12.0.0"
GitPython = "^3.1.18"
semver = "^2.13.0"
Jinja2 = "^3.0.1"
PyYAML = ">=5.4.1,<7.0.0"
simplejson = "^3.17.5"
pre-commit = "^2.15.0"
pydantic = {extras = ["email"], version = "^1.9.0"}
validators = "^0.18.2"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^22.1"
mypy = "^0.931"
bandit = "^1.7.2"
pycodestyle = "^2.7.0"
flake8 = "^3.9.2"
pydocstyle = "^6.0.0"
pylama = "^7.7.1"
poetry = "^1.1.12"
pytest-mock = "^3.7.0"
pytest-dependency = "^0.5.1"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"
deepdiff = "^5.5.0"
pytest-virtualenv = "^1.7.0"
loremipsum = "^1.0.5"
pre-commit = "^2.16.0"
isort = "^5.10.1"
coverage = "^6.3"

[tool.poetry.scripts]
fair = 'fair.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/FAIRDataPipeline/FAIR-CLI/issues"
